--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+            <link rel="icon" href="">
+            <meta charset="utf-8">
+            <meta name="keywords" content="E-Waste, electronic waste, waste, meheer17">
+            <meta name="description" content="E-Waste Manangement">
+            <meta name="viewport" content="width=device-width">
+            <title>E-Waste Management</title>
+            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css"type="text/css"/>       
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+            <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
