--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Sources</a></li>
-                <li><a href="#">Github</a></li>
+                <li><a href="https://github.com/wwsmiff/e-waste-management">Github</a></li>
             </ul>
         </nav>
         <div class="hamburger">
@@ -34,6 +34,7 @@
         </div>
       </header>
 
-      <script src="script.js"></script>  
+      <script src="script.js"></script>
+	  <script src="https://cdnjs.com/libraries/Chart.js"></script>
     </body>
 </html>
